# acodeaday

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTINUITY.md  DOCKER.md  PLAN.md  README.md  SETUP_NOTES.md  TASKS.md  acodeaday.code-workspace  docker-compose.prod.yml  docker-compose.yml  docs-setup-task.md  future_improvements.md  review.md  spec.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  test_judge0.py  test_judge0_sdk.py
backend/app/: main.py
backend/app/config/: logging.py  settings.py
backend/app/db/: connection.py  tables.py
backend/app/middleware/: auth.py
backend/app/routes/: chat.py  code.py  execution.py  problems.py  progress.py  submissions.py
backend/app/schemas/: chat.py  execution.py  problem.py  progress.py
backend/app/services/: chat.py  judge0.py  llm.py  progress.py  seeder.py  wrapper.py
backend/data/problems/: 001-two-sum.yaml  002-best-time-to-buy-and-sell-stock.yaml  003-contains-duplicate.yaml  004-product-of-array-except-self.yaml  005-maximum-subarray.yaml  006-maximum-product-subarray.yaml  007-find-minimum-in-rotated-sorted-array.yaml  008-search-in-rotated-sorted-array.yaml  009-3sum.yaml  010-container-with-most-water.yaml  011-sum-of-two-integers.yaml  012-number-of-1-bits.yaml  013-counting-bits.yaml  014-missing-number.yaml  015-reverse-bits.yaml  (+136 more)
backend/migrations/: env.py
backend/scripts/: seed_problems.py  verify_solutions.py
backend/tests/: __init__.py  conftest.py  test_routes_execution.py  test_routes_problems.py  test_routes_progress.py  test_routes_submissions.py
(+87 files in other folders)
