[project]
name = "backend"
version = "0.1.0"
description = "acodeaday backend - Daily coding practice with spaced repetition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "asyncpg>=0.31.0",
    "alembic>=1.17.2",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "python-multipart>=0.0.21",
    "python-dotenv>=1.2.1",
    "supabase>=2.0.0",
    "judge0>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince212:pyiceberg.*",
    "ignore::DeprecationWarning:pyiceberg.*",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
